# download-assets-rust

./: Cargo.toml  README.md
src/: downloader.rs  http_util.rs  main.rs  potential_file.rs  task_stream.rs
