[package]
name = "download-assets"
version = "0.1.0"
edition = "2021"
description = "Download GitHub release assets in parallel"
authors = ["John Thorvald Wodder II <download-assets-rust@varonathe.org>"]
repository = "https://github.com/jwodder/download-assets-rust"
license = "MIT"
keywords = ["GitHub", "download"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
