[package]
name = "download-assets"
version = "0.1.0"
edition = "2021"
description = "Download GitHub release assets in parallel"
authors = ["John Thorvald Wodder II <download-assets-rust@varonathe.org>"]
repository = "https://github.com/jwodder/download-assets-rust"
license = "MIT"
keywords = ["GitHub", "download"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
anyhow = "1.0.58"
async-stream = "0.3.3"
clap = { version = "3.2.12", default-features = false, features = ["derive", "std", "suggestions", "wrap_help"] }
fern = "0.6.1"
futures = "0.3.21"
ghrepo = "0.1.0"
indent_write = "2.2.0"
itertools = "0.10.3"
log = "0.4.17"
parse_link_header = "0.3.2"
reqwest = { version = "0.11.11", features = ["json", "stream"] }
serde = { version = "1.0.139", features = ["derive"] }
tokio = { version = "1.20.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.9"
