[package]
name = "download-assets"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"
description = "Download GitHub release assets in parallel"
authors = ["John Thorvald Wodder II <download-assets-rust@varonathe.org>"]
repository = "https://github.com/jwodder/download-assets-rust"
license = "MIT"
keywords = ["GitHub", "download"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
anyhow = "1.0.70"
async-stream = "0.3.4"
clap = { version = "4.1.11", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
fern = "0.6.1"
ghrepo = "0.4.0"
indent_write = "2.2.0"
itertools = "0.10.5"
log = "0.4.17"
mime = "0.3.17"
parse_link_header = "0.3.3"
reqwest = { version = "0.11.15", features = ["json", "stream"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "signal", "sync"] }
tokio-stream = "0.1.12"
tokio-util = "0.7.7"
